# OpenNi-Stuff

./: .gitignore  CMakeLists.txt  Depth.cpp  Depth.h  ExportedDepth.cpp  ExportedDepth.h  LICENSE  README.md  Registration.cpp  cvin.cpp  cvin.h
cam_props/: CMakeLists.txt  props.hpp  test.cpp
converter/: Registration.cpp
converter/cmake/Modules/: FindOpenNI2.cmake
converter/image/: Image.cpp
depth/: Depth.cpp  Depth.h  ExportedDepth.cpp  ExportedDepth.h
image/: ExportedImage.cpp  ExportedImage.h  Image.cpp  Image.h  main.cpp
ni1Recorder/: CMakeLists.txt  ni1Recorder.cpp
ni2Recorder/: CMakeLists.txt  ni2Recorder.cpp  props.hpp
simpleReader1/: CMakeLists.txt  cmake  ni1Reader.cpp
simpleReader2/: CMakeLists.txt  main.cpp  testbroked.sh
